--- a/package.json
+++ b/package.json
@@ -23,7 +23,8 @@
     "webpack-cli": "3.0.8"
   },
   "dependencies": {
-    "react": "16.4.1",
-    "react-dom": "16.4.1"
+    "next": "^8.1.0",
+    "react": "^16.8.6",
+    "react-dom": "^16.8.6"
   }
 }
