--- a/package.json
+++ b/package.json
@@ -4,7 +4,8 @@
   "description": "",
   "private": true,
   "scripts": {
-    "build": "next build"
+    "build": "next build",
+    "export": "next export"
   },
   "keywords": [],
   "author": "",
