--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
   "license": "ISC",
   "devDependencies": {
     "@types/next": "^8.0.5",
-    "@types/react": "16.4.1",
+    "@types/react": "^16.8.17",
     "@types/react-dom": "16.0.6",
     "@zeit/next-typescript": "^1.1.1",
     "css-loader": "^0.28.11",
