--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "private": true,
   "scripts": {
     "dev": "node server.js",
-    "serve": "yarn dev & ngrok http 3000",
+    "online": "ngrok http 3000",
+    "serve": "run-p dev online",
     "build": "next build && next export"
   },
   "keywords": [],
@@ -21,6 +22,7 @@
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
     "ngrok": "^3.1.1",
+    "npm-run-all": "^4.1.5",
     "style-loader": "^0.21.0",
     "ts-loader": "4.4.1",
     "typescript": "2.9.2",
