--- a/package.json
+++ b/package.json
@@ -13,11 +13,15 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "@strv/eslint-config-react": "^2.1.0",
+    "@strv/eslint-config-typescript": "^1.1.0",
     "@types/next": "^8.0.5",
     "@types/react": "^16.8.17",
     "@types/react-dom": "16.0.6",
+    "@typescript-eslint/parser": "^1.9.0",
     "@zeit/next-typescript": "^1.1.1",
     "css-loader": "^0.28.11",
+    "eslint-config-prettier": "^4.3.0",
     "express": "^4.17.0",
     "less": "^3.0.4",
     "less-loader": "^4.1.0",
