--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "css-loader": "^0.28.11",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
+    "eslint-import-resolver-alias": "^1.1.2",
     "express": "^4.17.0",
     "husky": "^2.3.0",
     "less": "^3.0.4",
