style: fixed useMiro typings

--- a/package.json
+++ b/package.json
@@ -37,6 +37,11 @@
       "git add"
     ]
   },
+  "prettier": {
+    "semi": false,
+    "singleQuote": true,
+    "trailingComma": "es5"
+  },
   "dependencies": {
     "next": "^8.1.0",
     "react": "^16.8.6",
