--- a/package.json
+++ b/package.json
@@ -74,6 +74,7 @@
     "style-loader": "^0.21.0",
     "ts-loader": "4.4.1",
     "typescript": "^3.4.5",
+    "typescript-styled-plugin": "^0.14.0",
     "webpack": "4.12.0",
     "webpack-cli": "3.0.8"
   },
