--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,25 @@
     "skipLibCheck": true,
     "sourceMap": true,
     "strict": true,
-    "target": "esnext"
-  }
+    "target": "esnext",
+    "noImplicitAny": true,
+    "noImplicitThis": true,
+    "suppressImplicitAnyIndexErrors": true,
+    "strictFunctionTypes": true,
+    "esModuleInterop": true,
+    "resolveJsonModule": true,
+    "pretty": true,
+    "forceConsistentCasingInFileNames": true,
+    "plugins": [
+      {
+        "name": "typescript-styled-plugin"
+      }
+    ],
+    "baseUrl": "src",
+    "paths": {
+      "~root/*": ["*"],
+      "~pages/*": ["pages/*"]
+    }
+  },
+  "include": ["src", "node_modules/jest-dom"]
 }
